# ChangeLog for dev-python/python-augeas
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-augeas/ChangeLog,v 1.5 2013/02/03 13:23:46 prometheanfire Exp $

  03 Feb 2013; Matthew Thode <prometheanfire@gentoo.org> metadata.xml:
  taking maintership

  03 Feb 2013; Pacho Ramos <pacho@gentoo.org> -python-augeas-0.3.0.ebuild,
  metadata.xml:
  Cleanup due #22900

*python-augeas-0.4.0 (11 May 2011)

  11 May 2011; MATSUU Takuto <matsuu@gentoo.org> +python-augeas-0.4.0.ebuild:
  Version bumped. Added src_test.

  11 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  python-augeas-0.3.0.ebuild:
  Set SUPPORT_PYTHON_ABIS (bug #345541).

*python-augeas-0.3.0 (24 Feb 2009)

  24 Feb 2009; MATSUU Takuto <matsuu@gentoo.org> +metadata.xml,
  +python-augeas-0.3.0.ebuild:
  Initial import, bug #229361.