@@ -1,24 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST python-augeas-0.4.0.tar.gz 88982 SHA256 f7a38913bb7aa1b94dd1cda86d9179902e89ba9f70dd41401989db844a69e590 SHA512 cf9c110b7ca98c1f7ca87273891366c879c1360e2c3f7ec0bc10929ce29c89a8c7009dd25bb6158aa0ca79bd725bad2c013d00e25a445763de84b0c0998a9d38 WHIRLPOOL 898ae74d46c1593578c33738339036075c13c09f6e51209680f946d8facc9df6a26bec251f148e30307739bb80d265bfb954de0854e81a87a041899f0e47b4e1
+DIST python-augeas-0.4.1.tar.gz 89652 SHA256 2d9e618fad03f68033b5ac94d0d57136df9ed75bf21c6e7877d3107866af89bf SHA512 ccd6ea10f927f06eba74dd48c21c7ca9a99c2910741ef925f078c09cd8a3421e63de3b74df2903a2cfd17f3defaa8df4624c9743d20e13bb5bfeacd7d50c5938 WHIRLPOOL bdb389691d85b259f0dba50205f99efa48ccec1676b48b2df2a7180079d1b3a91bd59f1020adbfe0088e7a5912fad6a0313d8c65cfb785fcbea87914d2676aec
 EBUILD python-augeas-0.4.0.ebuild 741 SHA256 bf895c476146c76ceb59c8cc95d991a962b395b6559152405fb3de32d3cd609e SHA512 aa8cf4584509e8a603014c00331cb75c221b474783366f91e692cf23a253beb09bdbb8f60de397236e3a605c2fa59d4d27e5322650b7ceb562fecac1f3bba4f3 WHIRLPOOL fb70ee1cf863fc8cabbf43bd6cf6dffdb9fcb1c83a749ae49f3718fcfd7e77846ebe58a65acbb130fb8c6c70df1f3e78c93f1422349cb0abffa2d865bf61b33a
-MISC ChangeLog 891 SHA256 d598e33858ff2a020365c05a54300374a82c036b5bb83c1b304f5639c7d32692 SHA512 60082497001eeb8a7cd3579e6b1738f8df59cdc7cc1ed1c946348821578e7280d0532658f161981c5ba8a8907bc2c7ea61b2d64419fc450fb8710a0726e80a3c WHIRLPOOL 213b5ba288cb9dedfbc41700c4f386d753d52f4da879a302fa34a7ac373ae7f42d6c1b098b1212918d1891937fddb7fef038447be20ab831df9f8b87be76a397
-MISC metadata.xml 312 SHA256 b7a8d0a02dc249d7200d99d988b99e3dba5c41094669241988b86c28de094673 SHA512 0e0de76637b71054ebc178771f2608823abaf0582ab52f56a696238d9bfb1f260fa2f547af76838da00d2480dc8ed618532602a7f3605c3cd73dcc09bdc880de WHIRLPOOL 02db87592709c5911bb4a1dce022f01fd2dd104aa25fc48be3f8fe3b7eb65e92d5eaf09fa0fefc63f399726ea8c8163d20e4c9ab36820a1f8c7b19bebd324f3b
+EBUILD python-augeas-0.4.1.ebuild 670 SHA256 54f5c1a5eb48975297fc81c38c14d7932d07dc734e42740b15c550f9200a8f79 SHA512 5a19baf5b4fc1b8fd356e7222299a3373f7ff65832a32f6f6bf42cb7119961f90cb7abfc5ebbbb8c53417bc583ac867a4b47eed205e9b99ab6a1bef75b09ff06 WHIRLPOOL fac7c1541fb5cff1dc09cc5d35ce5e2ad9e4b08044ee18a3b82824618c0e0b9f4d482ee6b6516a362f30a75bab0630138934f31953fb279bc13d933088958676
+MISC ChangeLog 1058 SHA256 1cfc6635944deae6489fcd39863ba2e3416ea2d364c9e3442e15076f397c7a23 SHA512 692e14507967d2700c6e37ff9d2cdee12e2af69e6ff19e15ba68288179de41d04ff0eb350ad193bea9e68794039ca72aafd24fa7c3e19988dfd881fafd43267b WHIRLPOOL 52502b4231cede20be14500ceef5971892e0a1a20c196393d7618396a292040c131e9a28b7e3183792e31fa8ce8b0a1a55070e85b931ea5ea4b9b142dc236c2e
+MISC metadata.xml 321 SHA256 969cdaf5bb2ab06236d1cc2b41646931428b093606df637029b356437d88f45e SHA512 c2e8b772fbfe2cf87bce9e75a50119e41c1e62bf013bd18fbeb98d23c17f9aea29b8c9000693b1010acc4148ce3ecbb1623c5f610e0b299ecb687292f1bbe7e8 WHIRLPOOL 9a69013ea71512f601007406285c5957165a17791f1ad1ce2959ed611b27bcd9827b15e861cf6a0efe5e2e33b755dcb4acec04cb6c61ef0d358d393b6856ab1f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRDmIPAAoJECRx6z5ArFrDCmUP/3xhG2bUHbRO1GQOfnYStWw3
-kCdSXe13gbbf7vZXCykieV/iyGRoyYgsGio4YDBOcw+kNuYaAwnHjQClteJJtNBM
-8squvelUd7b7guiwuC+Ecetz6E8Y8h1P+vJkA8Zb7SYIsdDbITTG5K+gqllBxHD4
-zM6m4QSYq203QDhX9rDgEbws+gUPUUiRBnyYDxdSvm8CGTJVgdRb9wg02W6G9+AI
-nRUgY3BphTkerWZVovON7vi1Km5S+23yChyhf/QbUvSNkWD6NE6J/aAVuK3ZFecp
-k/1yZxINlH/LvKSuFXytCXpZlknU1aRqo6nqO/64v2TmmRY/oTi7hiaCQhZ9rXdg
-jDxibsbuMayOmsIA6kLgFUTkMO+tZJE21SEvGxlf1u7+BXbbu2uNui7HG6MN/GXx
-BsshQSJ5SbpC1PVHnkrMHk4CjweuBRVOId/9eFoZn0lGCtCKSmlHBELbsNowl9+6
-3/PJXAJwfJhNB389YkXkqAu/okaCfyfmkYFD2Lv9aPgGhHLQUMZNHLWz9FcHsHqz
-8D88XeJkavMWGS6AUfQz+w+oHSUO1twoEjb/Iyg0sbgsh0K2m+JYLdHE6MjAX1wI
-RVb6b1CWFwRMN4+9iwlzO1EUtmu5Yn88gl+RNqkrU6apRCTukWluymddYw6BGR1Y
-3Fj0bZSQ7XhtKULTM5am
-=ZhLM
+iQIcBAEBCgAGBQJSsMAaAAoJELnU8jG9FVir1lgQAJmdze9VOY4ZaRqFOHIlC6Mr
+2qiene5Vx+7z9nNoAUZA7ED75n2LK5NpbKorVSPMzm2FIL4+LYnZlFue1KLeYhQc
++PD0QR52McILfBvr98xHDBzOcaEW1QGQgRDiCxNE+IkUyj4qNqfYSufi8s/sLXe6
+Ykt0hc+ULRy9jsxa4Kqp8xsq8PG4pr9U2XSx6Y5t4QJ6wdN/P+GMUu+7J7fxm4bD
++BPbmr6Fnl6k5wr7V5l/qSTwSzxjan8yXgt4pIV6+oK80PV7h16Zm702ymYb6rkC
+9msOL65cAQjQqo8Qv+gFp/e0yxJz2tI55LyoaV4fnU2tbYyO1Sa5KCXAJB2zSI1P
+1YDijtPeOns6N7Xm7UvUONhDqVcef8l8muw/Hgucyh/A+1blvCA1CkdSGfFPuAJN
+qvXZnkjGc2DzPeNOQeEBO0Yl3QByj9ncAzdDQAWYeyH98B3In0fac3fpU/tRTpFp
+bB1+H3Kl10YR7T+hKfNXpIdkOkBBH8C59l19akgJUfiNt+TV0LNkwK89MYiqkZpd
+QP3stY/+GEl84/5z79elPIY6vfhN/qjWge789Yl7rlCAZkM9UfXZeZkluPYpzkCV
+xgXpl1ru1zdiKHnIN4+nbgCRFPhIFELIJODk9FCgR9Eg0TKtM8KIx0JodT+FSG8H
+1krnNKPXjI+chPHqqw1E
+=iwC7
 -----END PGP SIGNATURE-----
