@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<maintainer>
-<email>prometheanfire@gentoo.org</email>
-</maintainer>
-<longdescription lang="en">
+  <maintainer>
+    <email>prometheanfire@gentoo.org</email>
+  </maintainer>
+  <longdescription lang="en">
 python-augeas is a set of Python bindings around augeas.
 </longdescription>
 </pkgmetadata>
-
