@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/python-augeas
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-augeas/ChangeLog,v 1.5 2013/02/03 13:23:46 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-augeas/ChangeLog,v 1.6 2013/12/17 21:20:25 jlec Exp $
+
+*python-augeas-0.4.1 (17 Dec 2013)
+
+  17 Dec 2013; Justin Lecher <jlec@gentoo.org> +python-augeas-0.4.1.ebuild,
+  metadata.xml:
+  Version BUmp; bump to new distutils-r1.eclass
 
   03 Feb 2013; Matthew Thode <prometheanfire@gentoo.org> metadata.xml:
   taking maintership
